--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -30,6 +30,18 @@ endpoints:
         enabled: true
 
 ---
+    grails:
+        mail:
+            host: "smtp.gmail.com"
+            port: 465
+            username: "UNTDFtpHOTEL@gmail.com"
+            password: "1234HOTEL"
+            props:
+                mail.smtp.auth: "true"
+                mail.smtp.socketFactory.port: "465"
+                mail.smtp.socketFactory.class: "javax.net.ssl.SSLSocketFactory"
+                mail.smtp.socketFactory.fallback: "false"
+---
 grails:
     mime:
         disable:
