--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ repositories {
 }
 
 dependencies {
-    compile 'org.grails.plugins:mail:2.0.0'
+    compile 'org.grails:grails-plugin-gsp'
+    compile "org.grails.plugins:mail:2.0.0.RC6"
     compile 'org.grails.plugins:spring-security-core:3.2.3'
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
