--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -35,7 +35,7 @@ endpoints:
             host: "smtp.gmail.com"
             port: 465
             username: "UNTDFtpHOTEL@gmail.com"
-            password: "1234HOTEL"
+            password: "1234hotel"
             props:
                 mail.smtp.auth: "true"
                 mail.smtp.socketFactory.port: "465"
